2007-01-02:  New major release due to restructuring.  The library is now
             packed into a separate namespace (Lacaml), and the previously
             visible Lacaml-module is now called "Impl".

2007-12-27:  Added new LAPACK function:

               * symv

2007-11-22:  Added Mat.scal and Mat.axpy.

2007-11-21:  Fixed a bug in vector iteration functions related to
             negative index increments.  Thanks to Fabrice Pardo
             <Fabrice.Pardo@lpn.cnrs.fr> for reporting!

             Greatly improved performance of matrix copying.  Cleaned up
             some code.  Removed dependency on F2C library (gfortran
             should nowadays be linked implicitly).

2007-03-30:  Added lacaml_utils to installed interfaces.

2007-03-28:  Fixed potential GC-bugs.  Updated OCamlMakefile.

2006-11-22:  Updated OCamlMakefile.

2006-09-15:  Fixed bug on 64bit architectures: Fortran integers are
             32bit only, Lacaml did not account for that.

2006-07-24:  Tightened parameter checks on functions that accept square
             matrices only to prevent LAPACK from complaining (i.e. raise
             OCaml exceptions instead).

2006-07-06:  Added Vec.concat.

2006-06-08:  Fixed some GC-bugs.  Cleaned up C-code.

2006-01-21:  Updated copy of f2c.h to fix size-related bugs on AMD64.
             Fixed some warnings introduced by OCaml-3.09.

2006-01-18:  Fixed a bug in pbsv and sbmv.

             Thanks to Christophe Troestler <Christophe.Troestler@umh.ac.be>
             for contributing the patch!

2006-01-16:  Updated OCamlMakefile.

2005-12-09:  Fixed an installation problem on Darwin.

2005-10-06:  Fixed META-file for better integration with the
             OCaml-toplevel.

             Added new function:

               * Mat.copy_row

2005-09-22:  Added new function:

               * Mat.to_col_vecs

2005-09-21:  Added new function:

               * Vec.random  (for both real and complex numbers)

2005-08-24:  Added a new function:
