@@ -1,4 +1,8 @@
-2007-01-02:  New major release due to restructuring.  The library is now
+2008-01-11:  Fixed installation of new release.  Added new function:
+
+               * Mat.detri
+
+2008-01-02:  New major release due to restructuring.  The library is now
              packed into a separate namespace (Lacaml), and the previously
              visible Lacaml-module is now called "Impl".
 
